# gnn-from-scratch

./: .coverage  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.conda/conda-meta/: _libgcc_mutex-0.1-main.json  _openmp_mutex-5.1-1_gnu.json  bzip2-1.0.8-h5eee18b_6.json  ca-certificates-2025.2.25-h06a4308_0.json  history  ld_impl_linux-64-2.40-h12ee557_0.json  libffi-3.4.4-h6a678d5_1.json  libgcc-ng-11.2.0-h1234567_1.json  libgomp-11.2.0-h1234567_1.json  libstdcxx-ng-11.2.0-h1234567_1.json  libuuid-1.41.5-h5eee18b_0.json  ncurses-6.4-h6a678d5_0.json  openssl-3.0.16-h5eee18b_0.json  pip-25.0-py311h06a4308_0.json  python-3.11.11-he870216_0.json  readline-8.2-h5eee18b_0.json  setuptools-75.8.0-py311h06a4308_0.json  sqlite-3.45.3-h5eee18b_0.json  tk-8.6.14-h39e8969_0.json  tzdata-2025a-h04d1e81_0.json  wheel-0.45.1-py311h06a4308_0.json  xz-5.6.4-h5eee18b_1.json  zlib-1.2.13-h5eee18b_1.json
.conda/etc/: aau_token
.conda/lib/: libtinfow.so.6.4  tclConfig.sh  tkConfig.sh
.conda/lib/itcl4.2.4/: itclConfig.sh
.conda/lib/pkgconfig/: formw.pc  history.pc  libcrypto.pc  libffi.pc  liblzma.pc  libssl.pc  menuw.pc  ncurses++w.pc  ncursesw.pc  openssl.pc  panelw.pc  python-3.11-embed.pc  python-3.11.pc  readline.pc  sqlite3.pc  tcl.pc  tinfow.pc  tk.pc  uuid.pc  zlib.pc
.conda/lib/python3.11/: _sysconfigdata__linux_x86_64-linux-gnu.py  _sysconfigdata__linux_x86_64-linux-gnu.py.orig  _sysconfigdata_x86_64_conda_cos6_linux_gnu.py  _sysconfigdata_x86_64_conda_linux_gnu.py
.conda/lib/python3.11/config-3.11-x86_64-linux-gnu/: Makefile  python-config.py
.conda/lib/tdbc1.1.7/: tdbcConfig.sh
.conda/share/terminfo/a/: abm85  abm85e  abm85h  abm85h-old  adm36  altos2  altos3  ampex210
.conda/share/terminfo/c/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt
.conda/share/terminfo/d/: ddr  dec-vt220
.conda/share/terminfo/e/: emu-220
.conda/share/terminfo/g/: go140  go140w  go225
.conda/share/terminfo/h/: hazel  hp2392  hp2641a  hp300h  hp700-wy  hp9845  hp98550  hpex  hpsub
.github/workflows/: deploy.yml
datasets/chemistry/: delaney-processed_clean.csv
graphmodels/: constants.py  data_utils.py  datasets.py  featurizer.py  layers.py  models.py
graphmodels.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
graphmodels/datasets/: mpnn_dataset.py  ngf_dataset.py
graphmodels/layers/: constants.py  g2_gnn.py  gin.py  graph_attention_layers.py  mpnn_layers.py
graphmodels/models/: constants.py  gat.py  mpnn.py  ngf_model.py
neuralfingerprint/: constants.py  datasets.py  featurizer.py  models.py
neuralfingerprint.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: Untitled.ipynb  attention.ipynb  best_model.pt  neuralgraphfingerprint.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
tests/: data_helpers.py  test_data_utils.py  test_datasets.py  test_featurizer.py  test_g2_gnn.py  test_gat_model.py  test_gin.py  test_graph_attention_layers.py  test_layers.py  test_models.py  test_mpnn_dataset.py  test_mpnn_layers.py  test_mpnn_model.py  test_nfg_dataset.py  test_ngf_model.py
(+122 files in other folders)
