[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphmodels"
version = "0.1.0"
description = "Featurization method developed by Duvenaud et al 2017."
authors = [
    {name = "Marcos Santana", email = "marcosvssantana@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch==2.6.0",
    "pandas",
    "numpy",
    "scipy",
    "rdkit==2024.9.6",
    "tqdm==4.67.1",
    "matplotlib==3.10.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "flake8==7.1.2"
]

[tool.setuptools]
packages = ["graphmodels"]  # Ensure this matches your package directory name

[tool.setuptools.package-data]
graphmodels = ["*.txt", "*.csv"]  # Adjust if your package includes extra data files

[tool.ruff]
line-length = 79
extend-select = ["E501"]  # E501 = line too long
fix = true
