[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphmodels"
version = "0.1.0"
authors = [
    {name = "Marcos Santana", email = "marcosvssantana@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch==2.6.0",
    "pandas",
    "etils",
    "importlib_resources",
    "numpy",
    "scipy",
    "rdkit==2024.9.6",
    "tqdm==4.67.1",
    "matplotlib==3.10.1",
    "jaxtyping==0.3.2",
    "typeguard==2.13.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "flake8==7.1.2"
]

[tool.setuptools]
packages = ["graphmodels"]  # Ensure this matches your package directory name

[tool.setuptools.package-data]
graphmodels = ["*.txt", "*.csv"]  # Adjust if your package includes extra data files

[tool.ruff]
line-length = 79
lint.extend-select = ["E501"]  # E501 = line too long
fix = true
ignore = ["F722"]
exclude = ["build", "dist", "__pycache__", ".venv"]

[tool.mypy]
disable_error_code = ["import-untyped"]